--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
 .index {
     font-family: monospace;
-    text-align: center;
-    background-color: #F6DDCC;
+    background-color: #eee;
 }
+
+.index .card {
+    width: 300px;
+    background: black;
+    margin: 16px auto;
+    padding: 2px;
+}
+
 .index .title {
-    font-weight: bold;
-    font-size: 50px;
-    background-color: #58D68D;
-    margin-left: 700px;
-    margin-right: 700px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 20px;
-    color: white;
+    background: #FF7E91;
+    margin-top: 0px;
+    margin-bottom: 2px;
+    font-size: 32px;
+    padding: 8px;
+    text-align: center;
+    font-weight: bolder;
 }
 .index .list-recipes {
     list-style-type: none;
@@ -20,6 +25,9 @@
 .index .list-recipes .recipe {
     height:50px;
     font-size: 25px;
+    background: #FFD1D8;
+    padding: 16px 8px;
+    text-align: center;
 }
 .lasagna {
     font-family: monospace;
